<resources>
    <string name="app_name">A co to?</string>
    <string name="startText">Hej!</string>
    <string name="startPlayText">Startujemy!</string>
    <string name="button">Button</string>
    <string name="startButton">Szybki start</string>
    <string name="startTeamButton">Zagraj z przyjaciółmi</string>
    <string name="settingsButton">Ustawienia</string>
    <string name="dodajSwojąPiosenkę">Dodaj swoją piosenkę</string>
    <string name="endButton">Koniec gry</string>
    <string name="addTitle">Tytuł</string>
    <string name="addAuthor">Wykonawca/Zespół</string>
    <string name="addCategory">Gatunek</string>
    <string name="addLanguage">Język</string>
    <string name="addSongButton">Dodaj Piosenkę</string>
    <string name="timeSongText">Czas na piosenkę (sekundy):</string>
    <string name="timeSongEdit">Domyślnie 90</string>
    <string name="filterCategoryString">Filtrowanie gatunków piosenek</string>
    <string name="filterLanguageString">Filtrowanie języków piosenek</string>
    <string name="filterAuthorString">Filtrowanie autorów piosenek</string>
    <string name="filterTitleString">Filtrowanie tytułów piosenek</string>
    <string name="timeSongButton">Ustaw czas</string>
    <string name="howManySongButton">Ustaw liczbe piosenek</string>
    <string name="howManySongEdit">Domyślnie 10</string>
    <string name="howManySongText">Liczba piosenek na rundę:</string>
    <string name="showSong">Pokaż wszystkie piosenki</string>
    <string name="songsTitle">Tytuł</string>
    <string name="songAuthor">Wykonawca</string>
    <string name="songCategory">Gatunek</string>
    <string name="songLanguage">Język</string>
    <string name="howManyPlayersText">Ile graczy?</string>
    <string name="howManyPlayersButton">Zatwierdź liczbę graczy</string>
    <string name="typePlayersNameButton">Zatwierdź nazwę gracza</string>

</resources>