<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context=".addNewSong"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/addTitle"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/addAuthor"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/addAuthor"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/addCategory"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/addCategory"
            android:inputType="number" />

        <EditText
            android:id="@+id/addLanguage"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/addLanguage"
            android:inputType="number" />

        <Button
            android:id="@+id/addSongButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"
            android:padding="30dp"
            android:text="@string/addSongButton"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

