<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllSongsPage"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TableLayout
                    android:id="@+id/tableSongs"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:isScrollContainer="true">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#000000">
                        <TextView
                            android:id="@+id/songTitle"
                            android:layout_width="180dp"
                            android:layout_height="80dp"
                            android:layout_column="0"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:text="@string/songsTitle"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/songAuthor"
                            android:layout_width="180dp"
                            android:layout_height="80dp"
                            android:layout_column="1"
                            android:background="#FFFFFF"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:text="@string/songAuthor"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/songCategory"
                            android:layout_width="120dp"
                            android:layout_height="80dp"
                            android:layout_column="2"
                            android:background="#FFFFFF"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:text="@string/songCategory"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/songLanguage"
                            android:layout_width="120dp"
                            android:layout_height="80dp"
                            android:layout_column="2"
                            android:layout_margin="1dp"
                            android:background="#FFFFFF"
                            android:gravity="center"
                            android:text="@string/songLanguage"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>